--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.tech_bay">
+    package="com.commerce.tech_bay">
    <application
         android:label="tech_bay"
         android:name="${applicationName}"
