--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_core: ^1.12.0
   firebase_auth: ^3.3.8
   cloud_firestore: ^3.1.13
+  get: ^4.6.1
+  firebase_storage: ^10.2.15
 
 dev_dependencies:
   flutter_test:
